# lzo2-unofficial

./: .gitignore  CMakeLists.txt
B/: version.rc.cmakein
include/lzo/: lzoconf.h
